[package]
name = "libnostrblog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
lazy_static = "1.5.0"
nostr-sdk = "0.41.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"
serde = "1.0.217"
serde_json = "1.0.137"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.43.0", features = ["rt", "macros", "sync"] }
tracing = "0.1.41"
