[package]
name = "libnostrblog"
version = "0.1.0"
edition = "2024"

[dependencies]
any_spawner = { version = "0.2.0", features = ["tokio"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
lazy_static = "1.5.0"
nostr-sdk = "0.41.0"
once_cell = "1.21.3"
parking_lot = "0.12.3"
serde = "1.0.219"
serde_json = "1.0.140"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "sync"] }
tracing = "0.1.41"
